# gitreach

./: .cursorignore  README.md  app.py  dependants.json  emails.csv  main.py  mem0ai-mem0-dependants.json  pyproject.toml  scrape.py
.cursor/rules/: environment.mdc
static/: script.js  styles.css
templates/: index.html
